Authentication and authorization implemented
